Update MemberService.java