@@ -7,6 +7,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -29,7 +30,7 @@ public class MemberService {
                 AuthServerURL +"/internal/member/api/memberInfo",
                 MemberInfoResponseServerDto[].class);
         assert memberInfos != null;
-        return List.of(memberInfos);
+        return Arrays.asList(memberInfos);
     }
 
 
